Functional/Forward release note.
Maybe a bit premature as I haven't even accepted the pull request, but
I'll probably forget if I don't do it now.

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -90,6 +90,18 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/functional/forward/">Functional/Forward</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fix C++11 compile error.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <em>TODO</em>
         </div>
       </li>
