Update the config setup to reflect current server.

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -366,8 +366,7 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
                   that contains something like:</p>
                   <pre>
 &lt;?php
-define('BOOST_RSS_DIR', '/path/to/boost/website/workplace/rss');
-define('BOOST_DATA_DIR', '/path/to/boost/website/workplace/data');
+define('BOOST_WEBSITE_SHARED_DIR', '/path/to/boost/website/workplace');
 define('ARCHIVE_DIR', '/path/to/boost/website/workplace/archives');
 define('RESULTS_DIR', '/path/to/boost/website/workplace/testing');
 define('UNZIP', 'unzip');
