Refresh all pages.
The site generation scripts generate slightly different pages to how
they used to. Still should be more or less the same in the browser,
apart from some sourceforge links, which are a tad nicer to use.

--- a/users/history/version_1_32_0.html
+++ b/users/history/version_1_32_0.html
@@ -42,8 +42,8 @@
               <p><span class=news-date">November 19th, 2004 12:00 GMT</span></p>
               <p><a href="/doc/libs/1_32_1/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.tar.bz2/download">boost_1_32_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.tar.gz/download">boost_1_32_0.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.exe/download">boost_1_32_0.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.zip/download">boost_1_32_0.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.tar.bz2">boost_1_32_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.tar.gz">boost_1_32_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.exe">boost_1_32_0.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.zip">boost_1_32_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -54,7 +54,7 @@
     - New Toolset Names</span></h3>
     <p>
       The names of some the Boost.Build <a href="/doc/libs/1_32_0/more/getting_started.html#Tools">toolsets</a>
-      have been changed to remove the &quot;<tt>.</tt>&quot; (dot) character
+      have been changed to remove the "<tt>.</tt>" (dot) character
       and to fix some other naming inconsistencies. For example, <tt>vc7.1</tt>
       toolset was renamed to become <tt>vc-7_1</tt>. Please refer to the
       <a href="/doc/libs/1_32_0/more/getting_started.html#Tools">Supported Toolsets</a>
@@ -294,7 +294,7 @@
   <div id="version_1_32_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <img alt="[]" src="http://boost.sourceforge.net/photos/aleksey_gurtovoy2.jpg"/> <a href="/users/people/aleksey_gurtovoy.html">Aleksey
+      <img src="http://boost.sourceforge.net/photos/aleksey_gurtovoy2.jpg" alt="[]"/> <a href="/users/people/aleksey_gurtovoy.html">Aleksey
       Gurtovoy</a> managed this release. <a href="/doc/libs/1_32_0/more/release_procedures.htm">Managing
       a release</a> at all is an enormous job, and Aleksey always goes beyond
       merely meeting requirements by insisting on the highest possible quality. The
