--- a/users/history/version_1_33_1.html
+++ b/users/history/version_1_33_1.html
@@ -39,11 +39,11 @@
               <h2><span class=
               "news-title">Version 1.33.1</span></h2>
 
-              <p><span class=news-date">December  5th, 2006 12:00 GMT</span></p>
+              <p><span class=news-date">December 5th, 2006 12:00 GMT</span></p>
               <p><a href="/doc/libs/1_33_1/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.bz2/download">boost_1_33_1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.gz/download">boost_1_33_1.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.exe/download">boost_1_33_1.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.zip/download">boost_1_33_1.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.bz2">boost_1_33_1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.gz">boost_1_33_1.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.exe">boost_1_33_1.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.zip">boost_1_33_1.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -287,7 +287,7 @@
         <div>
           <a href="http://msdn.microsoft.com/visualc/">Microsoft Visual C++</a>
           6.0 (sp5, with and without STLport), 7.0, 7.1, 8.0. Note: Boost does not
-          support the non-standard &quot;Safe&quot; C++ Library shipping with Visual
+          support the non-standard "Safe" C++ Library shipping with Visual
           C++ 8.0, which may result in many spurious warnings from Boost headers
           and other standards-conforming C++ code. To suppress these warnings, define
           the macro <code><span class="identifier">_SCL_SECURE_NO_DEPRECATE</span></code>.
@@ -298,7 +298,7 @@
   <div id="version_1_33_1.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <span class="inset-left"><img alt="Medieval Mr. Gregor" src="/gfx/boost_1_33_0.jpg"/></span>
+      <span class="inset-left"><img src="/gfx/boost_1_33_0.jpg" alt="Medieval Mr. Gregor"/></span>
 <a href="/users/people/doug_gregor.html">Douglas
       Gregor</a> managed this release.
     </p>
@@ -308,7 +308,7 @@
       managed to keep the regression testing system working throughout the release
       process; David Abrahams, Beman Dawes, Aleksey Gurtovoy, Bronek Kozicki, Rene
       Rivera and Jonathan Turkanis for greatly improving the quality of this release;
-      Rene Rivera for the new Boost web page design; and Zoltan &quot;cad&quot; Juhasz
+      Rene Rivera for the new Boost web page design; and Zoltan "cad" Juhasz
       for the new Boost logo.
     </p>
   </div>
