--- a/users/history/version_1_34_0.html
+++ b/users/history/version_1_34_0.html
@@ -42,8 +42,8 @@
               <p><span class=news-date">May 12th, 2007 12:00 GMT</span></p>
               <p><a href="/doc/libs/1_34_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.0/boost_1_34_0.tar.bz2/download">boost_1_34_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.0/boost_1_34_0.tar.gz/download">boost_1_34_0.tar.gz</a></td></tr>
-<tr><th scope="row">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.0/boost_1_34_0.zip/download">boost_1_34_0.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.0/boost_1_34_0.tar.bz2">boost_1_34_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.0/boost_1_34_0.tar.gz">boost_1_34_0.tar.gz</a></td></tr>
+<tr><th scope="row">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.0/boost_1_34_0.zip">boost_1_34_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -615,7 +615,7 @@
             </li>
             <li>
               <div>
-                Optional support for #pragma message &quot;...&quot; has been added.
+                Optional support for #pragma message "..." has been added.
               </div>
             </li>
             <li>
@@ -696,7 +696,7 @@
         <div>
           <a href="http://msdn.microsoft.com/visualc/">Microsoft Visual C++</a>
           6.0 (sp5, with and without STLport), 7.0, 7.1, 8.0. Note: Boost does not
-          support the non-standard &quot;Safe&quot; C++ Library shipping with Visual
+          support the non-standard "Safe" C++ Library shipping with Visual
           C++ 8.0, which may result in many spurious warnings from Boost headers
           and other standards-conforming C++ code. To suppress these warnings, define
           the macro <code><span class="identifier">_SCL_SECURE_NO_DEPRECATE</span></code>.
