--- a/users/history/version_1_55_0.html
+++ b/users/history/version_1_55_0.html
@@ -42,8 +42,8 @@
               <p><span class=news-date">November 11th, 2013 19:50 GMT</span></p>
               <p><a href="/doc/libs/1_55_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.tar.bz2/download">boost_1_55_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.tar.gz/download">boost_1_55_0.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.7z/download">boost_1_55_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.zip/download">boost_1_55_0.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.tar.bz2">boost_1_55_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.tar.gz">boost_1_55_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.7z">boost_1_55_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.zip">boost_1_55_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -295,7 +295,7 @@
                   <li>
                     <div>
                       Resolvers do not support service names, only numbers. I.e.
-                      you must use &quot;80&quot; rather than &quot;http&quot;.
+                      you must use "80" rather than "http".
                     </div>
                   </li>
                   <li>
@@ -533,8 +533,8 @@
             <li>
               <div>
                 <a href="http://svn.boost.org/trac/boost/ticket/7025">#7025</a>
-                circular buffer reports warning: &quot; type qualifiers ignored on
-                function return type&quot; while compile.
+                circular buffer reports warning: " type qualifiers ignored on
+                function return type" while compile.
               </div>
             </li>
             <li>
@@ -1355,8 +1355,8 @@
                 chaining <code><span class="special">.</span><span class="identifier">property</span><span class="special">(</span><span class="identifier">name</span><span class="special">,</span> <span class="identifier">pm</span><span class="special">)</span></code> calls. Example:
               </div>
 <pre><span class="identifier">boost</span><span class="special">::</span><span class="identifier">dynamic_properties</span><span class="special">()</span>
-  <span class="special">.</span><span class="identifier">property</span><span class="special">(</span><span class="string">&quot;color&quot;</span><span class="special">,</span> <span class="identifier">color_map</span><span class="special">)</span>
-  <span class="special">.</span><span class="identifier">property</span><span class="special">(</span><span class="string">&quot;pos&quot;</span><span class="special">,</span> <span class="identifier">position_map</span><span class="special">)</span>
+  <span class="special">.</span><span class="identifier">property</span><span class="special">(</span><span class="string">"color"</span><span class="special">,</span> <span class="identifier">color_map</span><span class="special">)</span>
+  <span class="special">.</span><span class="identifier">property</span><span class="special">(</span><span class="string">"pos"</span><span class="special">,</span> <span class="identifier">position_map</span><span class="special">)</span>
 </pre>
             </li>
             <li>
