--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -42,8 +42,8 @@
               <p><span class=news-date">April 17th, 2015 07:53 GMT</span></p>
               <p><a href="/doc/libs/1_58_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.bz2/download">boost_1_58_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.gz/download">boost_1_58_0.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.7z/download">boost_1_58_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.zip/download">boost_1_58_0.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.bz2">boost_1_58_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.gz">boost_1_58_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.7z">boost_1_58_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.zip">boost_1_58_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -347,26 +347,26 @@
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/9931">#9931:
-                      <em>&quot;flat_map::insert(ordered_unique_range_t...)
-                      fails with move_iterators&quot;</em></a> (reopened).
+                      <em>"flat_map::insert(ordered_unique_range_t...)
+                      fails with move_iterators"</em></a> (reopened).
                     </div>
                   </li>
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11076">#11076:
-                      <em>&quot;Unqualified calls to memmove/memcpy in container/detail/copy_move_algo.hpp&quot;</em></a>.
+                      <em>"Unqualified calls to memmove/memcpy in container/detail/copy_move_algo.hpp"</em></a>.
                     </div>
                   </li>
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/10790">Trac
-                      #10790 (<em>long long errors from container&quot;</em>)</a>.
+                      #10790 (<em>long long errors from container"</em>)</a>.
                     </div>
                   </li>
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/10808">Trac
-                      #10808 (<em>compare equal operator of vector is broken&quot;</em>)</a>.
+                      #10808 (<em>compare equal operator of vector is broken"</em>)</a>.
                     </div>
                   </li>
                 </ul>
@@ -945,8 +945,8 @@
                   <li>
                     <div>
                       <a href="https://github.com/boostorg/interprocess/pull/13">GitHub
-                      Pull #13 (<em>&quot;haiku: we don't have XSI shared memory,
-                      so don't try to use it&quot;</em>)</a>.
+                      Pull #13 (<em>"haiku: we don't have XSI shared memory,
+                      so don't try to use it"</em>)</a>.
                     </div>
                   </li>
                 </ul>
@@ -1158,8 +1158,8 @@
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11044">Trac
-                      #11044: <em>&quot;boost::rv inherits off union, when
-                      such passed as template argument&quot;</em></a>.
+                      #11044: <em>"boost::rv inherits off union, when
+                      such passed as template argument"</em></a>.
                     </div>
                   </li>
                 </ul>
@@ -1186,7 +1186,7 @@
 <span class="special">&gt;</span> <span class="identifier">multi_t</span><span class="special">;</span>
 <span class="special">...</span>
 <span class="identifier">multi_t</span> <span class="identifier">m</span><span class="special">=...;</span>
-<span class="identifier">m</span><span class="special">.</span><span class="identifier">find</span><span class="special">(</span><span class="string">&quot;boost&quot;</span><span class="special">);</span> <span class="comment">// passed a const char*, not a std::string    </span>
+<span class="identifier">m</span><span class="special">.</span><span class="identifier">find</span><span class="special">(</span><span class="string">"boost"</span><span class="special">);</span> <span class="comment">// passed a const char*, not a std::string    </span>
 </pre>
               <div>
                 In previous versions of the library, the <code><span class="identifier">find</span></code>
