--- a/users/history/version_1_33_0.html
+++ b/users/history/version_1_33_0.html
@@ -42,8 +42,8 @@
               <p><span class=news-date">August 11th, 2005 12:00 GMT</span></p>
 
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.tar.bz2/download">boost_1_33_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.tar.gz/download">boost_1_33_0.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.exe/download">boost_1_33_0.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.zip/download">boost_1_33_0.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.tar.bz2">boost_1_33_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.tar.gz">boost_1_33_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.exe">boost_1_33_0.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.0/boost_1_33_0.zip">boost_1_33_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -289,7 +289,7 @@
             </li>
             <li>
               <div>
-                Removed support for &quot;implicit&quot; (optional) values.
+                Removed support for "implicit" (optional) values.
               </div>
             </li>
             <li>
@@ -493,7 +493,7 @@
   <div id="version_1_33_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <img alt="[]" src="/gfx/boost_1_33_0.jpg"/><a href="/users/people/doug_gregor.html">Douglas Gregor</a>
+      <img src="/gfx/boost_1_33_0.jpg" alt="[]"/><a href="/users/people/doug_gregor.html">Douglas Gregor</a>
       managed this release.
     </p>
     <p>
@@ -502,7 +502,7 @@
       managed to keep the regression testing system working throughout the release
       process; David Abrahams, Beman Dawes, Aleksey Gurtovoy, Rene Rivera and Jonathan
       Turkanis for greatly improving the quality of this release; Rene Rivera for
-      the new Boost web page design; and Zoltan &quot;cad&quot; Juhasz for the new
+      the new Boost web page design; and Zoltan "cad" Juhasz for the new
       Boost logo.
     </p>
   </div>
