--- a/users/history/version_1_50_0.html
+++ b/users/history/version_1_50_0.html
@@ -42,8 +42,8 @@
               <p><span class=news-date">June 28th, 2012 12:48 GMT</span></p>
               <p><a href="/doc/libs/1_50_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.tar.bz2/download">boost_1_50_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.tar.gz/download">boost_1_50_0.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.7z/download">boost_1_50_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.zip/download">boost_1_50_0.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.tar.bz2">boost_1_50_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.tar.gz">boost_1_50_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.7z">boost_1_50_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.50.0/boost_1_50_0.zip">boost_1_50_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -470,7 +470,7 @@
                 <ul>
                   <li>
                     <div>
-                      added algorithm &quot;touches&quot; (OGC SF compliant) for
+                      added algorithm "touches" (OGC SF compliant) for
                       *polygon/*polygon
                     </div>
                   </li>
