--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -454,6 +454,27 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 		      
+                  <tr>
+                    <!-- Added February 2014 -->
+                    <td>Double-Ended</td>
+
+                    <td>Benedek Thaler</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/erenon/double_ended">
+                            Source</a>
+                        <li><a href="http://erenon.hu/double_ended">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
+
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
