Process has switched authors (Klemens Morgenstern takes over
with Boris Schaeling's blessing).  Review dates set.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -280,7 +280,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Process</td>
 
-                    <td>Boris Schaeling</td>
+                    <td>Klemens Morgenstern</td>
 
                     <td>
                       <!-- <ul>
@@ -299,9 +299,9 @@ http://www.boost.org/development/website_updating.html
                       "http://rrsd.com/blincubator.com/bi_library/process/?gform_post_id=1427">Incubator</a>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Antony Polukhin</td>
 
-                    <td>-</td>
+                    <td>October 27, 2016 - November 5, 2016</td>
                   </tr>
 
                   <tr>
