--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -455,7 +455,7 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 		      
                   <tr>
-                    <!-- Added February 2014 -->
+                    <!-- Added July 2016 -->
                     <td>Double-Ended</td>
 
                     <td>Benedek Thaler</td>
@@ -465,6 +465,29 @@ http://www.boost.org/development/website_updating.html
                         <li><a href="https://github.com/erenon/double_ended">
                             Source</a>
                         <li><a href="http://erenon.hu/double_ended">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
+
+                  <tr>
+                    <!-- Added July 2016 -->
+                    <td>PODs Flat Reflection</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="http://blincubator.com/bi_library/pfr-pod-flat-reflection/?gform_post_id=1606">
+                            Incubator</a>
+                        <li><a href="https://github.com/apolukhin/magic_get">
+                            Github</a>
+                        <li><a href="http://apolukhin.github.io/magic_get/">
                         Documentation</a>
                       </ul>
                     </td>                     
