Link to snapshot download page from dev release notes.

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -45,7 +45,7 @@
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/master/">Documentation</a>
-
+              <p><span class="news-download"><a href="https://sourceforge.net/projects/boost/files/boost/snapshots/master/">Download snapshot.</a></span></p>
               <div class="news-description">
                 <div class="description">
 
