Update development/testing.html for new snapshots.

--- a/development/testing.html
+++ b/development/testing.html
@@ -40,8 +40,7 @@ http://www.boost.org/development/website_updating.html
                 <li><a href="#RegressionTesting">Regression Tests</a></li>
 
                 <li><a href="#Inspection">Inspection Reports</a></li>
-                <!-- <li><a href="#Snapshots">Snapshots</a></li> -->
-
+                <li><a href="#Snapshots">Snapshots</a></li>
                 <li><a href="#Introduction">More about regression
                 tests</a></li>
               </ul>
@@ -94,15 +93,9 @@ http://www.boost.org/development/website_updating.html
               <h2><a name="Inspection" id="Inspection"></a>Inspection
               Reports</h2>
 
-              <p>The Boost Subversion repository is inspected daily to detect
-              problems such as missing copyrights or licenses. The Boost
-              Inspection Report tells all!</p>
-
-              <p><strong>Note:</strong> Since we're not currently creating
-              nightly builds, the normal inspection reports aren't being
-              generated. So, instead inspect is being run as part of the
-              documentation build. This isn't quite the same as a nightly
-              build, and isn't as regular. But it's pretty close.</p>
+              <p>The Boost snapshots are inspected daily to detect problems
+              such as missing copyrights or licenses. The Boost Inspection
+              Report tells all!</p>
 
               <table summary="Regression Results">
                 <tr>
@@ -121,8 +114,6 @@ http://www.boost.org/development/website_updating.html
                   branch</a></td>
                 </tr>
               </table>
-
-              <!--
               <h2><a name="Snapshots" id="Snapshots"></a>Snapshots</h2>
 
               <p>Snapshots are used for quality control checks.&nbsp; The
@@ -131,21 +122,39 @@ http://www.boost.org/development/website_updating.html
 
               <p>Because the snapshots represent work-in-process, they may
               not be suitable for production use.</p>
-
-              <table summary="Regression Results">
+              <table summary="Snapshots">
                 <tr>
                   <th>Version</th>
+                  <th>Download</th>
+                  <th>Documentation</th>
                 </tr>
 
                 <tr>
-                  <td><a href="http://boost.cowic.de/rc/">Release
-                  branch</a></td>
+                  <td>Master branch</td>
+                  <td><a title="Boost master branch snapshots on sourceforge"
+                  href=
+                  "https://sourceforge.net/projects/boost/files/boost/snapshots/master/">
+                  Sourceforge</a>, <a title=
+                  "Boost master branch snapshots on bintray" href=
+                  "https://bintray.com/boostorg/master/snapshot#files">Bintray</a>.</td>
+                  <td><a title="Boost master branch documentation snapshot"
+                  href="/doc/libs/master/">Documentation</a></td>
+                </tr>
+                <tr>
+                  <td>Develop branch</td>
+                  <td><a title=
+                  "Boost develop branch snapshots on sourceforge" href=
+                  "https://sourceforge.net/projects/boost/files/boost/snapshots/develop/">
+                  Sourceforge</a>, <a title=
+                  "Boost develop branch snapshots on bintray" href=
+                  "https://bintray.com/boostorg/develop/snapshot#files">Bintray</a>.</td>
+                  <td><a title="Boost develop branch documentation snapshot"
+                  href="/doc/libs/develop/">Documentation</a></td>
                 </tr>
               </table>
 
-              <p>The Git master branch can be checked out from
-              <a href="https://github.com/boostorg/boost">https://github.com/boostorg/boost</a>.</p>
-              -->
+              <p>The Git master branch can be checked out from <a href=
+              "https://github.com/boostorg/boost">https://github.com/boostorg/boost</a>.</p>
 
               <h2><a name="Introduction" id="Introduction"></a>More about
               regression tests</h2>
