--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -416,6 +416,30 @@
           </ul>
         </div>
       </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/unordered/">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Remove use of deprecated <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">iterator</span></code>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed an exception safety issue in assignment of <code><span class="identifier">unordered_multiset</span></code>
+                and <code><span class="identifier">unordered_multimap</span></code>.
+              </div>
+            </li>
+            <li>
+              <div>
+                See the <a href="/doc/libs/master/doc/html/unordered/changes.html">changelog</a>
+                for more details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
   <div id="version_1_62_0.compilers_tested">
