--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -498,6 +498,30 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
 
+                  <tr>
+                    <!-- Added August 2016 -->
+                    <td>CallableTraits</td>
+
+                    <td>Barrett Adair</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="http://blincubator.com/bi_library/pfr-pod-flat-reflection/?gform_post_id=1606">
+                            Incubator</a>
+                        <li><a href="Library Author">
+                            Source</a>
+                        <li><a href="Library Author">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
+
+		  
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
