Make the note on release notes a bit clearer.

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -34,7 +34,7 @@
             <div class="section-title">
               <h1>Version 1.62.0</h1>
             </div>
-                        <div class="section-note"><p>Note: This release is
+                        <div class="section-alert"><p>Note: This release is
                         still under development. Please don't use this page as
                         a source of information, it's here for development
                         purposes only. Everything is subject to
