Update review_schedule.html (#176)
Updating the name of the library and associated links

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -78,16 +78,24 @@ http://www.boost.org/development/website_updating.html
                   <tr>
                     <!-- Added May 2011 -->
 
-                    <td>Block Pointer</td>
+                    <td>Root Pointer</td>
 
                     <td>Phil Bouchard</td>
 
                     <td>
-                      <a href=
-                      "http://rrsd.com/blincubator.com/bi_library/block-pointer/?gform_post_id=1368">
-                      Incubator</a> <!-- <a href=
-                      "https://svn.boost.org/svn/boost/sandbox/block_ptr/">Boost
-                      Sandbox</a> -->
+                      <ul>
+                        <li>
+                          <a href=
+                          "https://github.com/philippeb8/root_ptr">Source
+                          (Github)</a>
+                        </li>
+
+                        <li>
+                          <a href=
+                          "http://philippeb8.github.io/root_ptr">
+                          Documentation</a>
+                        </li>
+                      </ul>
                     </td>
 
                     <td>Needed</td>
